# Openpaper-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ALEMBIC_FIX_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_GIF_GUIDE.md  DOCKER_STARTUP_FIX_REPORT.md  FINAL_CI_AUDIT_REPORT.md  GITHUB_ACTIONS_FIX_REPORT.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_DEPENDENCY_UPGRADE_REPORT.md  SECURITY_SCAN_FIX_REPORT.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
apps/api/: .coverage  .dockerignore  Dockerfile  SECURITY_AUDIT.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_refresh_tokens.py  003_workflows.py  004_marketplace.py  005_hub_registry.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/agents/: __init__.py  base.py  buyer_finder.py  ceo.py  orchestrator.py  research.py  sales.py
apps/api/app/api/: agent_graph.py  agents.py  analytics.py  auth.py  bus.py  chat.py  documents.py  health.py  hub_registry.py  marketplace.py  memory.py  messages.py  models.py  plugins.py  providers.py  tasks.py  vectors.py  workflows.py
apps/api/app/core/: embedding.py  encryption.py  error_middleware.py  event_bus.py  exceptions.py  health.py  hub_resolver.py  hub_signer.py  input_sanitizer.py  logging_middleware.py  memory.py  permissions.py  plugin_base.py  plugin_registry.py  rate_limiter.py  redis.py  security.py  security_middleware.py  sentry.py  validator.py  vector.py  workflow_engine.py
apps/api/app/models/: __init__.py  agent.py  events.py  hub_registry.py  task.py  (+5 more)
apps/api/tests/: conftest.py  pyproject.toml  test_bus.py  test_deepseek.py  test_deepseek_fallback.py  test_gemini.py  test_grok.py  test_grok_fallback.py  test_health.py  test_memory.py  test_nim.py  test_nim_fallback.py  test_plugins.py  test_security.py  test_validator.py  test_vector.py
openpaper_cli/: README.md  pyproject.toml
openpaper_cli/openpaper_cli/: __init__.py  hub_config.py  hub_registry.py  main.py
openpaper_cli/openpaper_cli/commands/: __init__.py  agents.py  configure.py  dashboard.py  doctor.py  models.py  onboard.py  plugins.py  run.py  update.py
openpaper_cli/openpaper_cli/core/: __init__.py  detector.py  docker.py  secrets.py
openpaper_cli/openpaper_cli/utils/: __init__.py  console.py  styles.py
(+256 files in other folders)
