[build-system]
requires = ["setuptools>=64.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "openpaper-cli"
version = "1.0.0"
description = "Enterprise CLI for OpenPaper AI — agent management platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "OpenPaper AI" },
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "cryptography>=42.0.0",
    "platformdirs>=4.2.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
signing = ["pynacl>=1.5.0"]

[project.scripts]
openpaper = "openpaper_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["openpaper_cli", "openpaper_cli.*"]
